--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ subjects:
 - !lcsh 'Poetry'
 - !lcc 'PN'
 - !lcsh 'Drama'
+- GITenberg
 tableOfContents: 'Goethe (Continued): Goetz von Berlichingen. Iphigenia in Tauris
   -- Nicolai Gogol: The inspector-general -- Oliver Goldsmith: She stoops to conquer
   -- Heinrich Heine: Atta Troll -- Homer: The Iliad. The Odyssey -- Horace: Poems
